--- a/CONTRIBUTING.html
+++ b/CONTRIBUTING.html
@@ -7,7 +7,6 @@
     <meta name="description" content="goSam" />
     <meta name="keywords" content="master" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script type="text/javascript" src=""></script>
   </head>
   <body>
     <div id="navbar">
@@ -324,6 +323,11 @@ SOFTWARE.
     </div>
     <div>
       <iframe src="https://snowflake.torproject.org/embed.html" width="320" height="240" frameborder="0" scrolling="no"></iframe>
+    </div>
+    <div>
+      <a href="https://geti2p.net/">
+        I2P
+      </a>
     </div>
   </body>
 </html>
