--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@ SOFTWARE.
     </div>
     <div>
       <a href="https://geti2p.net/">
+        <img src="i2plogo.png"></img>
         I2P
       </a>
     </div>
