--- a/CONTRIBUTING.html
+++ b/CONTRIBUTING.html
@@ -326,6 +326,7 @@ SOFTWARE.
     </div>
     <div>
       <a href="https://geti2p.net/">
+        <img src="i2plogo.png"></img>
         I2P
       </a>
     </div>
